# planetgame-rs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
assets/shaders/terrain/: fragment.wgsl  terrain.frag  vertex.wgsl
src/: diagnostics.rs  main.rs
src/spectator/: components.rs  mod.rs  resources.rs  systems.rs
src/terrain/: components.rs  lod_tree.rs  mod.rs  quad_tree.rs  resources.rs  systems.rs
src/terrain/generation/: chunk.rs  mod.rs
