[package]
name = "planetgame-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.0", features = ["wayland"] }
bevy_egui = "0.25.0"
bevy_math = "0.13.0"
bevy_xpbd_3d = "0.4.2"
egui = "0.26.2"
egui_plot = "0.26.2"
noise = "0.8.2"
ron = "0.8.1"
strum = "0.26.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
